# SE-ROS-Proj

./: Dockerfile  README.md  how_to_run
docs/: 01_需求分析报告.md  02_设计报告.md  03_测试计划.md  04_测试报告.md  05_用户手册.md  06_SBOM与代码说明.md  README.md
report/: 成员分工_提示词与注释规范.md
src/course_bringup/: CMakeLists.txt  package.xml
src/course_bringup/config/: sample_mission.json
src/course_bringup/course_bringup/: __init__.py
src/course_bringup/launch/: full_stack.launch.py  mission_demo.launch.py  scenario_case.launch.py
src/course_bringup/scripts/: auto_run_mission.py
src/course_interfaces/: CMakeLists.txt  package.xml
src/course_interfaces/action/: RunMission.action
src/course_interfaces/msg/: BatchTestResult.msg  MissionState.msg  SafetyState.msg  ZoneRule.msg  ZoneRuleArray.msg
src/course_interfaces/srv/: GetSafetyState.srv  LoadScenario.srv  ReloadZones.srv  RequestRecovery.srv  TriggerCancel.srv  TriggerEmergencyStop.srv  TriggerPause.srv
src/nav2_mission_manager/: .coveragerc  CMakeLists.txt  Dockerfile  package.xml
src/nav2_mission_manager/config/: mission_manager.yaml  sample_mission.json
src/nav2_mission_manager/launch/: mission_manager.launch.py
src/nav2_mission_manager/nav2_mission_manager/: __init__.py  events.py  mission_action_server.py  mission_loader.py  mission_manager_node.py  models.py  navigator_adapter.py  retry_policy.py  state_machine.py  states.py
src/nav2_mission_manager/resource/: nav2_mission_manager
src/nav2_mission_manager/scripts/: mission_manager_node  run_quality_gate.py  run_quality_gate.sh
src/nav2_mission_manager/test/: conftest.py  test_mission_action_server.py  test_mission_loader.py  test_models.py  test_navigator_adapter.py  test_retry_policy.py  test_state_machine.py
src/nav2_scenario_runner/: CMakeLists.txt  README.md  package.xml  plugins.xml
src/nav2_scenario_runner/config/batch_profiles/: default_batch.yaml  full_batch.yaml
src/nav2_scenario_runner/config/scenario_templates/: README.md
src/nav2_scenario_runner/include/nav2_scenario_runner/: generator_registry.hpp  metrics_utils.hpp  scenario_generator.hpp  scenario_serializer.hpp  scenario_types.hpp
src/nav2_scenario_runner/include/nav2_scenario_runner/plugins/: congestion_generator.hpp  corridor_generator.hpp  fault_injection_generator.hpp  room_inspection_generator.hpp
src/nav2_scenario_runner/launch/: run_batch_case.launch.py  run_single_case.launch.py
src/nav2_scenario_runner/scripts/: generate_cases.py  run_batch.py  run_batch.sh  run_batch_gui.sh  summarize_results.py
src/nav2_scenario_runner/src/: generate_scenario_node.cpp  generator_registry.cpp  scenario_serializer.cpp
src/nav2_scenario_runner/src/plugins/: congestion_generator.cpp  corridor_generator.cpp  fault_injection_generator.cpp  room_inspection_generator.cpp
src/nav2_scenario_runner/test/: test_case_matrix_builder.cpp  test_metrics_utils.cpp
src/sam_bot_nav2_gz/config/: nav2_params.yaml  nav2_params_demo_failure.yaml  nav2_params_demo_fast.yaml  nav2_params_demo_pause.yaml  nav2_params_demo_success.yaml  safety_monitor.yaml  safety_monitor_blockage_demo.yaml  safety_monitor_demo_pause.yaml
src/sam_bot_nav2_gz/config/behavior_trees/: navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml
src/sam_bot_nav2_gz/launch/: complete_navigation.launch.py  display.launch.py  nav2_params_utils.py
src/sam_bot_nav2_gz/scripts/: follow_waypoints.py  generate_scattered_room.py  reach_goal.py
src/sam_bot_nav2_gz/world/: bookstore.sdf  demo_pillar_room.sdf  demo_simple_room.sdf  empty.sdf  world_A.sdf  world_B.sdf
src/sam_bot_safety_monitor/: CMakeLists.txt  package.xml
src/sam_bot_safety_monitor/sam_bot_safety_monitor/: __init__.py  safety_monitor.py  safety_navigation.py
src/sam_bot_safety_monitor/scripts/: follow_waypoints_demo.py  follow_waypoints_demo_blockage_recovery.py  reach_goal_demo_failure.py  reach_goal_demo_pause_near_obstacle.py  reach_goal_demo_success.py  safety_demo_console.py  safety_demo_injector.py  safety_monitor_node.py
src/sam_bot_safety_monitor/test/: test_safety_sensor_timeout.launch.py  test_safety_services.launch.py
src/semantic_costmap_plugins/: CMakeLists.txt  README.md  package.xml  plugins.xml
src/semantic_costmap_plugins/config/: nav2_params_semantic.yaml
src/semantic_costmap_plugins/include/semantic_costmap_plugins/: cost_functions.hpp  dynamic_congestion_layer.hpp  geometry_utils.hpp  parameter_utils.hpp  preferred_lane_layer.hpp  semantic_types.hpp  semantic_zone_layer.hpp
src/semantic_costmap_plugins/launch/: semantic_navigation.launch.py
src/semantic_costmap_plugins/scripts/: publish_sample_congestion.py  set_task_mode.py
src/semantic_costmap_plugins/src/: cost_functions.cpp  dynamic_congestion_layer.cpp  geometry_utils.cpp  preferred_lane_layer.cpp  semantic_zone_layer.cpp
src/semantic_costmap_plugins/test/: test_cost_functions.cpp  test_geometry_utils.cpp
