<?xml version="1.0"?>
<package format="3">
  <name>nav2_scenario_runner</name>
  <version>0.1.0</version>
  <description>Plugin-based scenario generation and batch evaluation framework for Nav2.</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>course_bringup</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>python3-yaml</depend>
  <depend>yaml-cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
